Bug 425344 - Pop up palette not showing brushes on android
Summary: Pop up palette not showing brushes on android
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Android Android 10.x
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-14 13:08 UTC by alexandra.collin.35
Modified: 2020-10-06 10:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Empty pop up palette (635.90 KB, image/jpeg)
2020-08-14 13:08 UTC, alexandra.collin.35
Details

Note You need to log in before you can comment on or make changes to this bug.
Description alexandra.collin.35 2020-08-14 13:08:34 UTC
Created attachment 130867 [details]
Empty pop up palette

SUMMARY
The pop up palette worked fine until I tried to use the tag list for brush presets. When I tried selecting another tag, all the brushes disappeard. The circles are empty and if I try to select one anyway, nothing happen. I tried selecting the original tag and restarting the app but it didn't work, the pop up palette still doesn't display any brush.

STEPS TO REPRODUCE
1. Open the pop up palette
2. Select another tag in the tag list

OBSERVED RESULT
No brush is shown in the wheel

EXPECTED RESULT
Brushes from the tag should appear in the wheel

SOFTWARE/OS VERSIONS

Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
  Kernel Type: linux
  Kernel Version: 4.14.117-18571899
  Pretty Productname: Android  (10.0)
  Product Type: android
  Product Version: 10.0
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version:
   (compiled): 5.12.8
   (loaded): 5.12.8p
Krita version: 4.3.1-alpha (git 8798b4d)
Comment 1 Anna Medonosova 2020-08-15 22:00:18 UTC
I can reproduce this on my tablet.

I have also tried changing the number of palette presets, it does not help. When the configuration is reset, default presets appear on the palette.
Comment 2 sh_zam 2020-10-06 09:18:11 UTC
Git commit 34ef6479342e1aa468d5ecc621105a0ff5c93d54 by Sharaf Zaman.
Committed on 06/10/2020 at 08:53.
Pushed by rempt into branch 'krita/4.3'.

Bugfix: Pop up palette not showing brushes on android

On android the selection action's text includes the
accelerators. When the config is read, the corresponding
text (which includes accelerators) is invalid hence no
items are shown.

M  +1    -1    libs/ui/kis_popup_palette.cpp

https://invent.kde.org/graphics/krita/commit/34ef6479342e1aa468d5ecc621105a0ff5c93d54
Comment 3 sh_zam 2020-10-06 09:34:13 UTC
Git commit 657baef88e9fbbbab0fb34fc387a8efdc8f0275f by Sharaf Zaman.
Committed on 06/10/2020 at 09:34.
Pushed by szaman into branch 'krita/4.4.0'.

Bugfix: Pop up palette not showing brushes on android

On android the selection action's text includes the
accelerators. When the config is read, the corresponding
text (which includes accelerators) is invalid hence no
items are shown.


(cherry picked from commit 34ef6479342e1aa468d5ecc621105a0ff5c93d54)

M  +1    -1    libs/ui/kis_popup_palette.cpp

https://invent.kde.org/graphics/krita/commit/657baef88e9fbbbab0fb34fc387a8efdc8f0275f
Comment 4 sh_zam 2020-10-06 10:17:42 UTC
Git commit e6ae1fc918be69d96cc9a0a652ece1a4f4e4ac3b by Sharaf Zaman.
Committed on 06/10/2020 at 10:16.
Pushed by szaman into branch 'master'.

Bugfix: Pop up palette not showing brushes on android

On android the selection action's text includes the
accelerators. When the config is read, the corresponding
text (which includes accelerators) is invalid hence no
items are shown.

M  +1    -1    libs/ui/kis_popup_palette.cpp

https://invent.kde.org/graphics/krita/commit/e6ae1fc918be69d96cc9a0a652ece1a4f4e4ac3b