Bugfix: Pop up palette not showing brushes on android

On android the selection action's text includes the
accelerators. When the config is read, the corresponding
text (which includes accelerators) is invalid hence no
items are shown.

BUG:425344


(cherry picked from commit 34ef6479342e1aa468d5ecc621105a0ff5c93d54)